--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <input id="num" type="text" size="2" placeholder="число">
-<button onclick="res()">Рассчитать</button> 
+<button onclick="res()">Вычислить</button> 
 
 
     <script>
